Fix a wrong property name

This looks like a search-replace gone wrong. This was causing
https://bugs.freedesktop.org/show_bug.cgi?id=57343